testing new comments and sharing

--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ description: 'Description of site goes here'
 favicon: 'assets/images/favicon.ico'
 #baseurl: '/mundana-theme-jekyll'
 baseurl: ''
-disqus: 'demowebsite'
+#disqus: 'demowebsite'
 email: 'wowthemesnet@gmail.com'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
-
+graphcomment_id: 'Adventures-with-TnT'
 include: ["_pages"]
 permalink: /:title/
 
